# public/swagger.json
@@ -164,6 +164,91 @@
                     }
                 }
             }
+        },
+        "/profile": {
+            "get": {
+                "summary": "User Profile",
+                "description": "User profile",
+                "operationId": "userProfile",
+                "consumes": [
+                    "application/xml",
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "description": "Enter required fields details to show user profile",
+                        "required": true,
+                        "schema": {
+                            "definition": "users",
+                            "required": [
+                                "name",
+                                "email",
+                                "passwrod",
+                                "image",
+                                "type",
+                                "gender",
+                                "language known",
+                                "timing",
+                                "experience"
+                            ],
+                            "properties": {
+                                "name": {
+                                    "description": "Enter name of user",
+                                    "type": "string"
+                                },
+                                "email": {
+                                    "description": "Enter User email",
+                                    "type": "string"
+                                },
+                                "password": {
+                                    "description": "Enter password",
+                                    "type": "string"
+                                },
+                                "image": {
+                                    "description": "select Image path",
+                                    "type": "string"
+                                },
+                                "type": {
+                                    "description": "Enter type of user",
+                                    "type": "string"
+                                },
+                                "gender": {
+                                    "description": "Enter gender",
+                                    "type": "string"
+                                },
+                                "language known": {
+                                    "description": "Enter language known by user",
+                                    "type": "string"
+                                },
+                                "timing": {
+                                    "description": "Enter working timing",
+                                    "type": "string"
+                                },
+                                "experience": {
+                                    "description": "Enter experience",
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User Profile register Successfully!"
+                    },
+                    "404": {
+                        "description": "Page not Found"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            }
         }
     },
     "definitions": {
